--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "express": "^4.17.3",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
