--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "connect-multiparty": "^2.2.0",
     "express": "^4.17.3",
+    "morgan": "^1.10.0",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.1.4"
   }
