--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "eslint": "7.32.0",
-    "eslint-config-next": "12.1.4"
+    "eslint-config-next": "12.1.4",
+    "react-quill": "^1.3.5"
   }
 }
