--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "morgan": "^1.10.0",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-bootstrap": "^2.2.3",
+    "react-dom": "18.0.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.1.4",
+    "node-cron": "^3.0.0",
+    "promise-mysql": "^5.1.0",
     "react-quill": "^1.3.5"
   }
 }
