--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "homepage": "https://juhwannn.github.io",
   "dependencies": {
     "body-parser": "^1.20.0",
     "connect-multiparty": "^2.2.0",
@@ -23,6 +24,7 @@
     "dotenv": "^16.0.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.1.4",
+    "gh-pages": "^3.2.3",
     "node-cron": "^3.0.0",
     "promise-mysql": "^5.1.0",
     "react-quill": "^1.3.5"
