--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "gh-pages -d build"
   },
   "homepage": "https://juhwannn.github.io",
   "dependencies": {
@@ -17,6 +18,7 @@
     "react": "18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "18.0.0",
+    "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
