--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "18.0.0",
+    "react-icons": "^4.3.1",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.5"
   },
