--- a/package.json
+++ b/package.json
@@ -10,25 +10,19 @@
   },
   "homepage": "https://juhwannn.github.io",
   "dependencies": {
-    "body-parser": "^1.20.0",
-    "connect-multiparty": "^2.2.0",
-    "express": "^4.17.3",
-    "morgan": "^1.10.0",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "18.0.0",
+    "react-grid-layout": "^1.3.4",
     "react-icons": "^4.3.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.1.4",
     "gh-pages": "^3.2.3",
-    "node-cron": "^3.0.0",
-    "promise-mysql": "^5.1.0",
     "react-quill": "^1.3.5"
   }
 }
