--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "homepage": "https://juhwannn.github.io",
   "dependencies": {
+    "axios": "^1.1.3",
     "next": "12.1.4",
+    "process": "^0.11.10",
     "react": "18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "18.0.0",
