--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "homepage": "https://juhwannn.github.io",
   "dependencies": {
+    "@svgr/webpack": "^6.5.1",
     "axios": "^1.1.3",
     "next": "12.1.4",
     "process": "^0.11.10",
