--- a/.babelrc
+++ b/.babelrc
@@ -12,7 +12,8 @@
                 "pure": true,
                 "displayName": true,
                 "preprocess": false
-            }
+            },
+            "inline-react-svg"
         ]
     ]
 }
