--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "dotenv": "^16.0.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.1.4",
-    "gh-pages": "^3.2.3",
-    "react-quill": "^1.3.5"
+    "gh-pages": "^3.2.3"
   }
 }
