--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@svgr/webpack": "^6.5.1",
     "axios": "^1.1.3",
     "babel-plugin-prismjs": "^2.1.0",
+    "gray-matter": "^4.0.3",
     "marked": "^4.2.3",
     "next": "12.1.4",
     "prismjs": "^1.29.0",
