--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gray-matter": "^4.0.3",
     "marked": "^4.2.3",
     "next": "12.1.4",
+    "path": "^0.12.7",
     "prismjs": "^1.29.0",
     "process": "^0.11.10",
     "react": "18.0.0",
@@ -29,7 +30,6 @@
     "dotenv": "^16.0.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.1.4",
-    "gh-pages": "^3.2.3",
-    "react-quill": "^1.3.5"
+    "gh-pages": "^3.2.3"
   }
 }
